lexer_parser/src/test/exempleFile/miniJaja/success/oneFuntionVoidWithInstrs.mjj
class oneFuntionVoidWithInstrs {
    void f(){
        int x = 1;
        x++;
    };

    main{
        int abcde = 3 / a;
        f();
    }
}