lexer_parser/src/test/exempleFile/miniJaja/fail/mainNotFinal.mjj
class mainNotFinal {
    int x = 1;

    void main(){
        int z = add(x, 1);
    }

    int y = 2;
}